[project]
name = "que"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.11.0",
    "cachetools==5.5.2",
    "certifi==2025.8.3",
    "charset-normalizer==3.4.3",
    "colorama==0.4.6",
    "distro==1.9.0",
    "google-auth==2.40.3",
    "google-genai==1.39.1",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.10",
    "jiter==0.11.0",
    "keyboard==0.13.5",
    "openai==1.109.1",
    "pillow==11.3.0",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.2",
    "pydantic==2.11.9",
    "pydantic-core==2.33.2",
    "pyperclip==1.11.0",
    "pystray==0.19.5",
    "python-dotenv==1.1.1",
    "requests==2.32.5",
    "rsa==4.9.1",
    "setuptools==78.1.1",
    "six==1.17.0",
    "sniffio==1.3.1",
    "tenacity==9.1.2",
    "tqdm==4.67.1",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.1",
    "urllib3==2.5.0",
    "websockets==15.0.1",
    "wheel==0.45.1",
]
